@@ -42,16 +42,16 @@ master_doc = 'index'
 
 # General information about the project.
 project = u'pysmb'
-copyright = u'2001-2014, Michael Teo http://miketeo.net/'
+copyright = u'2001-2015, Michael Teo http://miketeo.net/'
 
 # The version info for the project you're documenting, acts as replacement for
 # |version| and |release|, also used in various other places throughout the
 # built documents.
 #
 # The short X.Y version.
-version = '1.1.10'
+version = '1.1.15'
 # The full version, including alpha/beta/rc tags.
-release = '1.1.10'
+release = '1.1.15'
 
 # The language for content autogenerated by Sphinx. Refer to documentation
 # for a list of supported languages.
