@@ -1,4 +1,10 @@
 
+pysmb-1.1.15, 15 Feb 2015
+=========================
+
+- Add new parameter to SMBConnection's storeFileFromOffset method to determine
+  whether the remote file is to be truncated before writing.
+
 pysmb-1.1.14, 1 Feb 2015
 ========================
 
